--- a/demo/cube.html
+++ b/demo/cube.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <script src="assets/svgtk.js"></script>
+  <script src="../src/svgtk.js"></script>
   <script src="cube.js"></script>
   <script src="cube-demo.js"></script>
 </head>
