--- a/demo/index.html
+++ b/demo/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 <head>
-  <script src="assets/svgtk.js"></script>
-  <script src="assets/gear-util.js"></script>
+  <script src="../src/svgtk.js"></script>
+  <script src="../src/gear-util.js"></script>
   <script src="index.js"></script>
 </head>
 <body>
