--- a/demo/index.html
+++ b/demo/index.html
@@ -1,9 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <script src="../src/svgtk.js"></script>
-  <script src="../src/gear-util.js"></script>
-  <script src="index.js"></script>
+  <script type="module" src="index.js"></script>
 </head>
 <body>
 <div>
